# skripsi-delta-robot

./: LICENSE
HASIL/: calibration_result.xlsx
HASIL/plot_trajectory/: all_runs_summary.csv  cartesian_analysis.csv
HASIL/plot_trajectory/1/: accuracy_analysis.csv  robot_commands.csv  robot_status.csv
HASIL/plot_trajectory/10/: accuracy_analysis.csv  robot_commands.csv  robot_status.csv
HASIL/plot_trajectory/11/: accuracy_analysis.csv  robot_commands.csv  robot_status.csv
HASIL/plot_trajectory/12/: accuracy_analysis.csv  robot_commands.csv  robot_status.csv
HASIL/plot_trajectory/13/: accuracy_analysis.csv  robot_commands.csv  robot_status.csv
HASIL/plot_trajectory/14/: accuracy_analysis.csv  robot_commands.csv  robot_status.csv
HASIL/plot_trajectory/15/: accuracy_analysis.csv  robot_commands.csv  robot_status.csv
HASIL/plot_trajectory/2/: accuracy_analysis.csv  robot_commands.csv  robot_status.csv
HASIL/plot_trajectory/3/: accuracy_analysis.csv  robot_commands.csv  robot_status.csv
HASIL/plot_trajectory/4/: accuracy_analysis.csv  (+2 more)
Kalibrasi/Kalibrasi Kamera/: camera_calibration.yaml
Kalibrasi/Koreksi Koordinat/: cali.py  calibration_result.xlsx
Robot-src/control/: package.xml  setup.py
Robot-src/hw/: package.xml  setup.cfg  setup.py
Robot-src/kinematics/: package.xml  setup.py
Robot-src/msgs/: CMakeLists.txt  package.xml
Robot-src/odete/: package.xml  setup.cfg  setup.py
Robot-src/odete/config/: camera_calibration.json  detector_params.yaml  workspace.yaml
Robot-src/odete/launch/: odete.launch.py
Robot-src/odete/odete/: odete.py
(+74 files in other folders)
