<?xml version="1.0"?>

<package format="3">

  <name>odete</name>

  <version>0.0.0</version>

  <description>Robot perception package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <depend>rclpy</depend>

  <depend>std_msgs</depend>

  <depend>geometry_msgs</depend>

  <depend>msgs</depend>

  <exec_depend>python3-opencv</exec_depend>

  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>